# cares_msgs

./: CMakeLists.txt  README.md  package.xml
action/: Actuation.action  ArchieRailCmd.action  Cut.action  Mapping.action  MetricExtraction.action  PlatformGoal.action  Scanning.action
msg/: ArucoMarkers.msg  Cane.msg  CutPoint.msg  Fruitlet.msg  Fruitlets.msg  InstanceMasks.msg  Metrics.msg  Node.msg  NodeNeighbourInfo.msg  PathPlanningConstraints.msg  Vine.msg
srv/: ArucoDetect.srv  CalibrationService.srv  CharucoDetect.srv  Detection.srv  ExtractCutPoints.srv  ExtractThinPoints.srv  LoadVine.srv  MergeExtractor.srv  SetThinPoints.srv
